--- a/practice2_nn/practice2_nn_basic.ipynb
+++ b/practice2_nn/practice2_nn_basic.ipynb
@@ -2,6 +2,346 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 185,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# credit : https://pytorch.org/tutorials/beginner/blitz/neural_networks_tutorial.html#define-the-network"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## Neural Networks\n",
+    "Neural networks can be constructed using the torch.nn package\n",
+    "An nn.Module contains layers, and a method forward(input) that returns the output\n",
+    "\n",
+    "https://pytorch.org/docs/stable/nn.html#linear"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Define the network\n",
+    "\n",
+    "Inputs : 8x1x32x32 (nSamples x nChannels x Height x Width)\n",
+    "\n",
+    "Output : 8x10 (nSamples x nClasses)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Net(\n",
+      "  (fc1): Linear(in_features=1024, out_features=120, bias=True)\n",
+      "  (fc2): Linear(in_features=120, out_features=84, bias=True)\n",
+      "  (fc3): Linear(in_features=84, out_features=10, bias=True)\n",
+      "  (relu): ReLU(inplace)\n",
+      ")\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "\n",
+    "class Net(nn.Module):\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        super(Net, self).__init__()\n",
+    "        # an affine operation: y = Wx + b\n",
+    "        self.fc1 = nn.Linear(32*32, 120)\n",
+    "        self.fc2 = nn.Linear(120, 84)\n",
+    "        self.fc3 = nn.Linear(84, 10)\n",
+    "        self.relu = nn.ReLU(inplace=True)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        # View returns a new tensor with the same data but of a different size\n",
+    "        x = x.view(-1,32*32)\n",
+    "        x = self.relu(self.fc1(x))\n",
+    "        x = self.relu(self.fc2(x))\n",
+    "        x = self.fc3(x)\n",
+    "        return x\n",
+    "\n",
+    "net = Net()\n",
+    "print(net)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You just have to define the forward function, and the backward function (where gradients are computed) is automatically defined for you using autograd. \n",
+    "### You can use any of the Tensor operations in the forward function. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AnyOperatios(\n",
+      "  (fc1): Linear(in_features=1024, out_features=120, bias=True)\n",
+      "  (fc2): Linear(in_features=120, out_features=84, bias=True)\n",
+      "  (fc3): Linear(in_features=84, out_features=10, bias=True)\n",
+      "  (relu): ReLU(inplace)\n",
+      ")\n"
+     ]
+    }
+   ],
+   "source": [
+    "class AnyOperatios(nn.Module):\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        super(AnyOperatios, self).__init__()\n",
+    "        # an affine operation: y = Wx + b\n",
+    "        self.fc1 = nn.Linear(32*32, 120)\n",
+    "        self.fc2 = nn.Linear(120, 84)\n",
+    "        self.fc3 = nn.Linear(84, 10)\n",
+    "        self.relu = nn.ReLU(inplace=True)\n",
+    "    def forward(self, x):\n",
+    "        # View returns a new tensor with the same data but of a different size\n",
+    "        x = x.view(-1,32*32)\n",
+    "        x = self.relu(self.fc1(x))\n",
+    "        x = self.relu(self.fc2(x))\n",
+    "        x = self.fc3(x)\n",
+    "        #noise = torch.Tensor(3).normal_(0,1)\n",
+    "        for i in range(10):\n",
+    "            if torch.rand(1).item()>0.5:\n",
+    "                x = x*x\n",
+    "            else:\n",
+    "                x = x+x\n",
+    "        return x\n",
+    "\n",
+    "net2 = AnyOperatios()\n",
+    "print(net2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The learnable parameters of a model are returned by net.parameters()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "params = list(net.parameters())\n",
+    "print(len(params))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[-0.0674, -0.0574, -0.0396, -0.1980, -0.1095,  0.1493, -0.0293,\n",
+      "          0.0542, -0.0898,  0.0865]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "input = torch.randn(1, 1, 32, 32)\n",
+    "out = net(input)\n",
+    "print(out)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Loss Function\n",
+    "A loss function takes the (output, target) pair of inputs, and computes a value that estimates how far away the output is from the target.\n",
+    "\n",
+    "There are several different loss functions under the nn package . A simple loss is: nn.MSELoss which computes the mean-squared error between the input and the target.\n",
+    "\n",
+    "For example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(0.5634)\n"
+     ]
+    }
+   ],
+   "source": [
+    "output = net(input)\n",
+    "target = torch.randn(10)  # a dummy target, for example\n",
+    "target = target.view(1, -1)  # make it the same shape as output\n",
+    "criterion = nn.MSELoss()\n",
+    "\n",
+    "loss = criterion(output, target)\n",
+    "print(loss)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Backprop\n",
+    "To backpropagate the error all we have to do is to loss.backward(). You need to clear the existing gradients though, else gradients will be accumulated to existing gradients.\n",
+    "\n",
+    "Now we shall call loss.backward(), and have a look at fc1’s bias gradients before and after the backward."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fc1.bias.grad before backward\n",
+      "tensor([ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+      "         0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+      "         0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+      "         0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+      "         0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+      "         0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+      "         0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+      "         0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+      "         0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+      "         0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.])\n",
+      "fc1.bias.grad after backward\n",
+      "tensor(1.00000e-02 *\n",
+      "       [-1.0024,  0.0000,  0.0000, -1.3914,  0.0000,  1.0028,  0.0000,\n",
+      "         0.0000,  0.4292,  0.0000,  0.0000, -1.3869,  0.0000,  0.0000,\n",
+      "         0.0000,  0.7421, -1.1266,  1.7804,  0.0000,  0.0000,  0.0000,\n",
+      "         0.0000, -1.1573,  0.0000,  0.0000, -1.8062,  0.0000, -0.5900,\n",
+      "         0.2783,  0.0000,  0.0000,  0.0000,  0.0000, -0.7661,  1.2350,\n",
+      "        -1.5484,  0.0000,  0.9237,  0.6688,  0.0000,  0.0000,  0.0000,\n",
+      "        -0.5477,  1.5640,  1.1504,  0.1334,  0.6327,  0.0000,  0.0000,\n",
+      "        -1.0072,  0.0000,  0.0000,  1.1649,  0.0000,  2.0126, -0.1662,\n",
+      "        -0.0613, -1.0714,  0.0000,  0.4562,  0.2698,  0.0000,  0.0000,\n",
+      "         0.0000, -0.4081,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
+      "         0.0000,  0.0000, -0.5564,  0.0133,  0.0000, -1.5193,  0.0000,\n",
+      "         0.0000,  0.0000, -0.5531,  0.0000, -1.8406, -1.0452,  0.0000,\n",
+      "         0.0000,  1.0146, -1.0342,  0.0000,  0.0000,  0.0000,  0.0000,\n",
+      "         0.0000, -0.4956,  0.0000,  0.0000,  0.0278, -0.6454,  1.5579,\n",
+      "         0.0000,  0.0000,  0.0000,  0.1210,  0.0000, -0.7316, -0.1325,\n",
+      "         0.0000,  0.0000, -0.2623,  0.0000,  0.0000,  0.0000,  0.4436,\n",
+      "        -0.3715,  0.1634, -1.4448,  0.0000,  0.0000, -1.4073,  0.0000,\n",
+      "         0.0000])\n"
+     ]
+    }
+   ],
+   "source": [
+    "net.zero_grad()     # zeroes the gradient buffers of all parameters\n",
+    "\n",
+    "print('fc1.bias.grad before backward')\n",
+    "print(net.fc1.bias.grad)\n",
+    "\n",
+    "loss.backward()\n",
+    "\n",
+    "print('fc1.bias.grad after backward')\n",
+    "print(net.fc1.bias.grad)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Update the weights\n",
+    "The simplest update rule used in practice is the Stochastic Gradient Descent (SGD):\n",
+    "\n",
+    "weight = weight - learning_rate * gradient\n",
+    "We can implement this using simple python code:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "learning_rate = 0.01\n",
+    "for f in net.parameters():\n",
+    "    f.data.sub_(f.grad.data * learning_rate)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "However, as you use neural networks, you want to use various different update rules such as SGD, Nesterov-SGD, Adam, RMSProp, etc. To enable this, we built a small package: torch.optim that implements all these methods. Using it is very simple:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import torch.optim as optim\n",
+    "\n",
+    "# create your optimizer\n",
+    "optimizer = optim.SGD(net.parameters(), lr=0.01)\n",
+    "\n",
+    "# in your training loop:\n",
+    "optimizer.zero_grad()   # zero the gradient buffers\n",
+    "output = net(input)\n",
+    "loss = criterion(output, target)\n",
+    "loss.backward()\n",
+    "optimizer.step()    # Does the update"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "Observe how gradient buffers had to be manually set to zero using optimizer.zero_grad(). This is because gradients are accumulated as explained in Backprop section."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
