--- a/practice2_nn/practice2_nn_basic.ipynb
+++ b/practice2_nn/practice2_nn_basic.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
@@ -60,10 +60,10 @@
     "\n",
     "class Net(nn.Module):\n",
     "\n",
-    "    def __init__(self):\n",
+    "    def __init__(self,H,y):\n",
     "        super(Net, self).__init__()\n",
     "        # an affine operation: y = Wx + b\n",
-    "        self.fc1 = nn.Linear(32*32, 120)\n",
+    "        self.fc1 = nn.Linear(H, 120)\n",
     "        self.fc2 = nn.Linear(120, 84)\n",
     "        self.fc3 = nn.Linear(84, 10)\n",
     "        self.relu = nn.ReLU(inplace=True)\n",
@@ -76,7 +76,7 @@
     "        x = self.fc3(x)\n",
     "        return x\n",
     "\n",
-    "net = Net()\n",
+    "net = Net(32,y)\n",
     "print(net)"
    ]
   },
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
     "        self.fc2 = nn.Linear(120, 84)\n",
     "        self.fc3 = nn.Linear(84, 10)\n",
     "        self.relu = nn.ReLU(inplace=True)\n",
-    "    def forward(self, x):\n",
+    "    def forward(self, x, y, [x]):\n",
     "        # View returns a new tensor with the same data but of a different size\n",
     "        x = x.view(-1,32*32)\n",
     "        x = self.relu(self.fc1(x))\n",
@@ -128,7 +128,7 @@
     "                x = x*x\n",
     "            else:\n",
     "                x = x+x\n",
-    "        return x\n",
+    "        return x + y\n",
     "\n",
     "net2 = AnyOperatios()\n",
     "print(net2)"
@@ -143,33 +143,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6\n"
-     ]
+     "data": {
+      "text/plain": [
+       "<generator object parameters at 0x7fd151d6a230>"
+      ]
+     },
+     "execution_count": 194,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "params = list(net.parameters())\n",
-    "print(len(params))"
+    "net.parameters()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[-0.0674, -0.0574, -0.0396, -0.1980, -0.1095,  0.1493, -0.0293,\n",
-      "          0.0542, -0.0898,  0.0865]])\n"
+      "tensor([[-0.0703,  0.0148, -0.0134, -0.0727,  0.0938,  0.1302, -0.0579,\n",
+      "          0.1098, -0.1761,  0.1537]])\n"
      ]
     }
    ],
@@ -193,14 +195,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(0.5634)\n"
+      "tensor(1.4320)\n"
      ]
     }
    ],
@@ -226,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [
     {
@@ -234,35 +236,26 @@
      "output_type": "stream",
      "text": [
       "fc1.bias.grad before backward\n",
-      "tensor([ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
-      "         0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
-      "         0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
-      "         0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
-      "         0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
-      "         0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
-      "         0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
-      "         0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
-      "         0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
-      "         0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.])\n",
+      "None\n",
       "fc1.bias.grad after backward\n",
       "tensor(1.00000e-02 *\n",
-      "       [-1.0024,  0.0000,  0.0000, -1.3914,  0.0000,  1.0028,  0.0000,\n",
-      "         0.0000,  0.4292,  0.0000,  0.0000, -1.3869,  0.0000,  0.0000,\n",
-      "         0.0000,  0.7421, -1.1266,  1.7804,  0.0000,  0.0000,  0.0000,\n",
-      "         0.0000, -1.1573,  0.0000,  0.0000, -1.8062,  0.0000, -0.5900,\n",
-      "         0.2783,  0.0000,  0.0000,  0.0000,  0.0000, -0.7661,  1.2350,\n",
-      "        -1.5484,  0.0000,  0.9237,  0.6688,  0.0000,  0.0000,  0.0000,\n",
-      "        -0.5477,  1.5640,  1.1504,  0.1334,  0.6327,  0.0000,  0.0000,\n",
-      "        -1.0072,  0.0000,  0.0000,  1.1649,  0.0000,  2.0126, -0.1662,\n",
-      "        -0.0613, -1.0714,  0.0000,  0.4562,  0.2698,  0.0000,  0.0000,\n",
-      "         0.0000, -0.4081,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
-      "         0.0000,  0.0000, -0.5564,  0.0133,  0.0000, -1.5193,  0.0000,\n",
-      "         0.0000,  0.0000, -0.5531,  0.0000, -1.8406, -1.0452,  0.0000,\n",
-      "         0.0000,  1.0146, -1.0342,  0.0000,  0.0000,  0.0000,  0.0000,\n",
-      "         0.0000, -0.4956,  0.0000,  0.0000,  0.0278, -0.6454,  1.5579,\n",
-      "         0.0000,  0.0000,  0.0000,  0.1210,  0.0000, -0.7316, -0.1325,\n",
-      "         0.0000,  0.0000, -0.2623,  0.0000,  0.0000,  0.0000,  0.4436,\n",
-      "        -0.3715,  0.1634, -1.4448,  0.0000,  0.0000, -1.4073,  0.0000,\n",
+      "       [ 0.0000, -2.5788,  0.0000, -1.4811, -0.8217,  0.0000, -1.1966,\n",
+      "         0.3178,  0.0000, -3.0738,  0.0000,  3.3465,  0.0000,  0.0000,\n",
+      "         0.0000, -1.0964,  0.0000,  0.5056,  1.0128,  0.0000,  0.0000,\n",
+      "        -0.1896, -1.6696,  0.0000,  0.0000, -1.1987,  0.2927,  0.0000,\n",
+      "         0.8849,  0.0000,  0.0000,  2.2814,  1.6716,  0.0000,  0.0000,\n",
+      "         1.3862,  0.0000,  0.0000,  0.0000,  0.0000, -1.1707, -0.6066,\n",
+      "         0.1717, -0.0806,  0.0000,  0.0000,  0.0000,  0.6546, -1.0097,\n",
+      "        -0.4544,  0.0000, -0.5843,  0.0000,  0.5264,  2.3708,  2.2536,\n",
+      "         2.2594,  0.0000,  1.4260,  1.8788, -3.4025,  0.0000,  0.6176,\n",
+      "         0.2025,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
+      "         2.0084, -3.2181,  0.0000, -0.4886,  0.0000,  0.0000, -2.0577,\n",
+      "         1.2799, -3.5213,  0.0000,  0.0000,  0.0000,  0.5658, -1.8295,\n",
+      "         0.0000,  0.0000,  0.0000,  0.0000,  0.0000, -0.7927,  0.2357,\n",
+      "         0.0000, -0.8262,  0.0000,  0.0000,  0.0000,  0.0000,  2.4481,\n",
+      "         1.6562,  0.0000,  0.0000, -1.0737,  0.0611, -0.8580,  0.0000,\n",
+      "        -0.6953, -0.5300, -2.8905,  0.0000,  0.0000,  0.0000, -0.0457,\n",
+      "         0.0000, -0.2434, -0.8645,  0.0000, -3.2976, -0.7611,  1.2870,\n",
       "         0.0000])\n"
      ]
     }
@@ -292,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 192,
    "metadata": {
     "collapsed": true
    },
@@ -312,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 193,
    "metadata": {
     "collapsed": true
    },
@@ -324,7 +317,8 @@
     "optimizer = optim.SGD(net.parameters(), lr=0.01)\n",
     "\n",
     "# in your training loop:\n",
-    "optimizer.zero_grad()   # zero the gradient buffers\n",
+    "   # zero the gradient buffers\n",
+    "\n",
     "output = net(input)\n",
     "loss = criterion(output, target)\n",
     "loss.backward()\n",
