--- a/practice3_cnn/cnn.ipynb
+++ b/practice3_cnn/cnn.ipynb
@@ -48,7 +48,7 @@
     }
    ],
    "source": [
-    "img = torch.rand(1,1,5,5) # batchsize x channels x width x height\n",
+    "img = torch.rand(1,1,5,5) # batchsize x channels x height x width    \n",
     "myconv = nn.Conv2d(1,3,kernel_size=3)\n",
     "out = myconv(img)\n",
     "print(out.size())"
@@ -103,7 +103,7 @@
     }
    ],
    "source": [
-    "featuremap = torch.rand(1,2,5,5) # batchsize x channels x width x height\n",
+    "featuremap = torch.rand(1,2,5,5) # batchsize x channels x height x width \n",
     "myconv = nn.Conv2d(2,3,kernel_size=3)\n",
     "out = myconv(featuremap)\n",
     "print(out.size())"
@@ -165,7 +165,7 @@
     }
    ],
    "source": [
-    "featuremap = torch.rand(1,2,5,5) # batchsize x channels x width x height\n",
+    "featuremap = torch.rand(1,2,5,5) # batchsize x channels x height x width    \n",
     "myconv = nn.Conv2d(2,2,kernel_size=3,padding=1) \n",
     "out = myconv(featuremap)\n",
     "print(out.size())"
@@ -192,7 +192,7 @@
     }
    ],
    "source": [
-    "featuremap = torch.rand(1,2,10,10) # batchsize x channels x width x height\n",
+    "featuremap = torch.rand(1,2,10,10) # batchsize x channels x height x width    \n",
     "myconv = nn.Conv2d(2,2,kernel_size=3,padding=1,stride=2) \n",
     "out = myconv(featuremap)\n",
     "print(out.size())"
@@ -226,7 +226,7 @@
     }
    ],
    "source": [
-    "featuremap = torch.rand(1,2,10,10) # batchsize x channels x width x height\n",
+    "featuremap = torch.rand(1,2,10,10) # batchsize x channels x height x width    \n",
     "mypool = nn.MaxPool2d(kernel_size=2, stride=2)\n",
     "out = mypool(featuremap)\n",
     "print(out.size())"
