--- a/practice1_intro/pracitice1_intro.ipynb
+++ b/practice1_intro/pracitice1_intro.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,18 +55,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[0.0250, 0.7691, 0.6192],\n",
-      "        [0.5918, 0.8718, 0.4403],\n",
-      "        [0.9425, 0.2718, 0.9438],\n",
-      "        [0.2548, 0.4789, 0.9186],\n",
-      "        [0.9858, 0.7808, 0.1787]])\n"
+      "tensor([[0.2986, 0.9961, 0.1173],\n",
+      "        [0.3160, 0.0526, 0.6780],\n",
+      "        [0.7607, 0.4185, 0.7726],\n",
+      "        [0.2782, 0.2703, 0.2168],\n",
+      "        [0.7099, 0.1715, 0.5292]])\n"
      ]
     }
    ],
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -86,13 +86,33 @@
        "torch.float32"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "x.dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([5, 3])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x.size()"
    ]
   },
   {
@@ -105,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -152,6 +172,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[1, 2],\n",
+      "        [3, 4]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = torch.tensor([[1,2], [3,4]])\n",
+    "print(x)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -163,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -177,11 +216,11 @@
       "        [1, 1, 1],\n",
       "        [1, 1, 1],\n",
       "        [1, 1, 1]], dtype=torch.int32)\n",
-      "tensor([[-1.1611, -0.5592, -1.1292],\n",
-      "        [ 0.8826,  0.6475,  1.6249],\n",
-      "        [ 1.2232, -1.1065,  0.2432],\n",
-      "        [-1.2512, -1.1390,  0.9763],\n",
-      "        [-1.3176,  0.3706,  0.4981]])\n"
+      "tensor([[-1.5228,  0.9799,  0.8282],\n",
+      "        [ 0.6001,  0.7433, -1.2898],\n",
+      "        [-0.3279,  0.8509,  0.4074],\n",
+      "        [ 0.8735, -0.9321, -1.3161],\n",
+      "        [-1.1103, -0.0507, -0.7092]])\n"
      ]
     }
    ],
@@ -206,19 +245,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([5, 3])\n"
+      "3\n"
      ]
     }
    ],
    "source": [
-    "print(x.size())"
+    "print(x.size()[1])"
    ]
   },
   {
@@ -237,18 +276,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[-0.9976,  0.2982, -0.7757],\n",
-      "        [ 1.5489,  0.7881,  2.3108],\n",
-      "        [ 1.7576, -0.5351,  0.5493],\n",
-      "        [-0.4242, -0.7578,  1.3151],\n",
-      "        [-0.6569,  0.4389,  1.3297]])\n"
+      "tensor([[-1.3998,  1.7313,  1.4620],\n",
+      "        [ 1.4603,  1.3029, -0.7805],\n",
+      "        [-0.1730,  1.5596,  0.9993],\n",
+      "        [ 1.3617, -0.6545, -0.6751],\n",
+      "        [-0.3848,  0.8102, -0.5544]])\n"
      ]
     }
    ],
@@ -267,18 +306,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[-0.9976,  0.2982, -0.7757],\n",
-      "        [ 1.5489,  0.7881,  2.3108],\n",
-      "        [ 1.7576, -0.5351,  0.5493],\n",
-      "        [-0.4242, -0.7578,  1.3151],\n",
-      "        [-0.6569,  0.4389,  1.3297]])\n"
+      "tensor([[-1.3998,  1.7313,  1.4620],\n",
+      "        [ 1.4603,  1.3029, -0.7805],\n",
+      "        [-0.1730,  1.5596,  0.9993],\n",
+      "        [ 1.3617, -0.6545, -0.6751],\n",
+      "        [-0.3848,  0.8102, -0.5544]])\n"
      ]
     }
    ],
@@ -296,18 +335,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[-0.9976,  0.2982, -0.7757],\n",
-      "        [ 1.5489,  0.7881,  2.3108],\n",
-      "        [ 1.7576, -0.5351,  0.5493],\n",
-      "        [-0.4242, -0.7578,  1.3151],\n",
-      "        [-0.6569,  0.4389,  1.3297]])\n"
+      "tensor([[-1.3998,  1.7313,  1.4620],\n",
+      "        [ 1.4603,  1.3029, -0.7805],\n",
+      "        [-0.1730,  1.5596,  0.9993],\n",
+      "        [ 1.3617, -0.6545, -0.6751],\n",
+      "        [-0.3848,  0.8102, -0.5544]])\n"
      ]
     }
    ],
@@ -330,14 +369,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([-0.5592,  0.6475, -1.1065, -1.1390,  0.3706])\n"
+      "tensor([ 0.9799,  0.7433,  0.8509, -0.9321, -0.0507])\n"
      ]
     }
    ],
@@ -355,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -374,6 +413,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-1.8927, -0.9411,  0.0260,  1.0107],\n",
+       "        [ 0.6511, -2.2246,  0.7126, -1.8753],\n",
+       "        [-0.7039,  1.2022, -2.3297,  0.1043],\n",
+       "        [-1.0270, -0.9857,  0.6816, -0.3370]])"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x.t()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -384,15 +446,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([-1.4194])\n",
-      "-1.41942024231\n"
+      "tensor([0.0359])\n",
+      "0.0359316840768\n"
      ]
     }
    ],
@@ -428,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -652,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -706,14 +768,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<AddBackward object at 0x7fcb3d2f1110>\n"
+      "<AddBackward object at 0x7fb714a49310>\n"
      ]
     }
    ],
@@ -731,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -761,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -770,7 +832,7 @@
      "text": [
       "False\n",
       "True\n",
-      "<SumBackward0 object at 0x7fcb6e1ef950>\n"
+      "<SumBackward0 object at 0x7fb714a49050>\n"
      ]
     }
    ],
@@ -798,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -816,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -856,14 +918,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([1195.3351,  574.4010,   85.1459], grad_fn=<MulBackward>)\n"
+      "tensor([-1103.8849, -1158.7416,  -579.3843], grad_fn=<MulBackward>)\n"
      ]
     }
    ],
