--- a/practice3_cnn/cnn.ipynb
+++ b/practice3_cnn/cnn.ipynb
@@ -166,7 +166,7 @@
    ],
    "source": [
     "featuremap = torch.rand(1,2,5,5) # batchsize x channels x height x width    \n",
-    "myconv = nn.Conv2d(2,2,kernel_size=3,padding=1) \n",
+    "myconv = nn.Conv2d(2,2,kernel_size=5,padding=2) \n",
     "out = myconv(featuremap)\n",
     "print(out.size())"
    ]
@@ -327,6 +327,7 @@
     "                                          shuffle=False)\n",
     "\n",
     "# Convolutional neural network (two convolutional layers)\n",
+    "# 1x28x28\n",
     "class ConvNet(nn.Module):\n",
     "    def __init__(self, num_classes=10):\n",
     "        super(ConvNet, self).__init__()\n",
@@ -343,10 +344,15 @@
     "        self.fc = nn.Linear(7*7*32, num_classes)\n",
     "        \n",
     "    def forward(self, x):\n",
+    "        1x28x28\n",
     "        out = self.layer1(x)\n",
+    "        16x14x14\n",
     "        out = self.layer2(out)\n",
+    "        32x7x7\n",
     "        out = out.reshape(out.size(0), -1)\n",
+    "        batchsize x(32x7x7)\n",
     "        out = self.fc(out)\n",
+    "        batchsize x 10\n",
     "        return out\n",
     "\n",
     "model = ConvNet(num_classes).to(device)\n",
